k8s/base/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chatapp-service
  namespace: default
  labels:
    app: chatapp
spec:
  selector:
    app: chatapp
  ports:
  - name: http
    port: 80
    targetPort: 3000
    protocol: TCP
  sessionAffinity: ClientIP
